# graphed-checkpoint-mvp

./: CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.graphed/: state.json
.graphed/M0/: attempts.md
.graphed/M8/: amendments.md  attempts.md
docs/: api.rst  conf.py  design.rst  improvements.rst  index.rst
scripts/: advance.py
src/graphed_checkpoint/: __init__.py  codec.py  errors.py  retry.py  runner.py  store.py
tests/extra/m8/: test_kill_after_guard.py
tests/frozen/m8/: README.md  analyses.py  deployment.py  test_codec.py  test_deployment.py  test_errors.py  test_no_source.py  test_realistic.py  test_resume.py  test_store.py
